Display current location, temperature, and weather

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1>Local weather for...</h1>
-      <div id="data">
+      <h1>Local weather for <span id="location"><span></h1>
+      <div class="temp-display">
         
       </div>
     </div>
