--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
     <div class="container-fluid text-center">
       <h1>Local weather for <span id="location"><span></h1>
       <div class="temp-display">
-        
+        <button id="main-temp"><p class="display"></p></button>
       </div>
+      <div class="hi-lo">
+
+      </div>
+      <div class="conditions">
+
+      </div>
+
     </div>
 
     <script
