Update CSS and styling

--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <title>Local Weather</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
     integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1>Local weather for <span id="location"><span></h1>
+      <h1>Local weather for... <br><span id="location"><span></h1>
       <div class="temp-display">
         <button id="main-temp"><p class="display"></p></button>
+      </div>
+      <div class="info">
+
       </div>
       <div class="hi-lo">
 
@@ -20,8 +24,10 @@
       <div class="conditions">
 
       </div>
-
     </div>
+    <footer class="fixed-bottom text-center">
+      <p>© 2017 Jordan Stanway. All rights reserved.</p>
+    </footer>
 
     <script
     src="https://code.jquery.com/jquery-3.2.1.js"
