--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
       </div>
     </div>
-    <footer class="fixed-bottom text-center">
-      <p>© 2017 Jordan Stanway. All rights reserved.</p>
+    <footer id="footer" class="fixed-bottom text-center">
+      <!-- copyright here -->
     </footer>
 
     <script
