--- a/index.html
+++ b/index.html
@@ -11,18 +11,22 @@
   </head>
   <body>
     <div class="container-fluid text-center">
-      <h1>Local weather for... <br><span id="location"><span></h1>
-      <div class="temp-display">
-        <button id="main-temp"><p class="display"></p></button>
-      </div>
-      <div class="info">
+      <div class="row justify-content-center">
+        <div id="main" class="col col-12 col-md-10 col-xl-8">
+          <h1>Local weather for... <br><span id="location"></span></h1>
+          <div class="temp-display">
+            <button id="main-temp"><p class="display"></p></button>
+          </div>
+          <div class="info">
 
-      </div>
-      <div class="hi-lo">
+          </div>
+          <div class="hi-lo">
 
-      </div>
-      <div class="conditions">
+          </div>
+          <div class="conditions">
 
+          </div>
+        </div>
       </div>
     </div>
     <footer id="footer" class="fixed-bottom text-center">
